--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
   <title>Calendário de Reservas • Mercatto Delícia</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
   <style>
-    :root{
+    :root {
       --bg:#0b0f19;
       --card:#151b28;
-      --line:#202938;
-      --text:#f1f5f9;
+      --line:#1e2533;
+      --text:#f8fafc;
       --muted:#94a3b8;
       --gold:#b8860b;
       --green:#22c55e;
       --red:#ef4444;
       --radius:14px;
     }
+
     *{box-sizing:border-box}
     body{
       margin:0;
@@ -29,93 +31,102 @@
       min-height:100vh;
       padding:20px;
     }
-    header{
-      text-align:center;
-      margin-bottom:20px;
-    }
+
+    /* ===== HEADER ===== */
+    header{text-align:center;margin-bottom:20px;}
     header img{
       width:120px;
       border-radius:50%;
+      box-shadow:0 0 20px rgba(184,134,11,.3);
     }
     header h1{
-      margin:10px 0 0;
+      margin-top:12px;
       font-size:1.3rem;
       color:var(--gold);
-      letter-spacing:0.5px;
+      font-weight:700;
     }
 
-    /* CALENDÁRIO */
+    /* ===== CALENDÁRIO ===== */
     .calendar{
       width:100%;
       max-width:800px;
       background:var(--card);
       border-radius:var(--radius);
-      padding:15px;
-      box-shadow:0 4px 20px rgba(0,0,0,.3);
+      padding:18px;
+      box-shadow:0 8px 25px rgba(0,0,0,.5);
+      border:1px solid var(--line);
+      animation:fadeIn .5s ease;
     }
+
     .calendar-header{
       display:flex;
       justify-content:space-between;
       align-items:center;
-      padding:10px;
       border-bottom:1px solid var(--line);
+      padding-bottom:10px;
+      margin-bottom:10px;
     }
     .calendar-header button{
       background:none;
       border:none;
       color:var(--gold);
-      font-size:1rem;
+      font-size:1.1rem;
       cursor:pointer;
-      padding:6px 10px;
-      font-weight:600;
+      padding:8px 10px;
+      font-weight:700;
+      transition:transform .1s;
     }
+    .calendar-header button:hover{transform:scale(1.2)}
     .calendar-header h2{
       margin:0;
       font-size:1.1rem;
       color:var(--text);
+      letter-spacing:0.5px;
     }
+
     .weekdays,.days{
       display:grid;
       grid-template-columns:repeat(7,1fr);
       gap:6px;
       text-align:center;
-      margin-top:8px;
     }
     .weekdays div{
-      font-size:0.8rem;
+      font-size:.8rem;
       color:var(--muted);
       padding:6px 0;
     }
+
     .day{
       background:var(--bg);
       border:1px solid var(--line);
       border-radius:10px;
       padding:12px 6px;
       min-height:70px;
-      font-size:0.9rem;
+      font-size:.9rem;
       cursor:pointer;
-      transition:all .2s ease;
       display:flex;
       flex-direction:column;
       justify-content:flex-start;
       align-items:center;
+      transition:all .2s ease;
     }
-    .day:hover{border-color:var(--gold);transform:scale(1.02);}
+    .day:hover{border-color:var(--gold);box-shadow:0 0 10px rgba(184,134,11,.3);}
     .day.disabled{opacity:.25;pointer-events:none;}
     .day .num{font-weight:600;margin-bottom:5px;}
+
     .badge{
-      font-size:0.75rem;
+      font-size:.75rem;
       border-radius:8px;
       padding:2px 6px;
       margin-top:3px;
     }
-    .badge.pend{background:rgba(239,68,68,.2);color:var(--red);}
-    .badge.conf{background:rgba(34,197,94,.2);color:var(--green);}
+    .badge.pend{background:rgba(239,68,68,.15);color:var(--red);}
+    .badge.conf{background:rgba(34,197,94,.15);color:var(--green);}
 
-    /* MODAL */
+    /* ===== MODAL ===== */
     #modal{
       position:fixed;
-      top:0;left:0;right:0;bottom:0;
+      inset:0;
       background:rgba(0,0,0,.7);
       display:none;
       align-items:center;
@@ -129,14 +140,16 @@
       padding:20px;
       width:90%;
       max-width:420px;
-      box-shadow:0 6px 25px rgba(0,0,0,.5);
-      animation:fadeIn .3s ease forwards;
+      box-shadow:0 10px 40px rgba(0,0,0,.6);
+      animation:fadeInUp .3s ease forwards;
+      border:1px solid var(--line);
     }
-    @keyframes fadeIn{from{opacity:0;transform:scale(.96);}to{opacity:1;transform:scale(1);}}
+    @keyframes fadeInUp{from{opacity:0;transform:translateY(20px);}to{opacity:1;transform:translateY(0);}}
     .modal-content h3{
       text-align:center;
       color:var(--gold);
       margin-top:0;
+      margin-bottom:10px;
     }
     .reserva-item{
       border:1px solid var(--line);
@@ -144,19 +157,23 @@
       padding:10px;
       margin-bottom:10px;
       background:var(--bg);
+      transition:.2s ease;
     }
+    .reserva-item:hover{border-color:var(--gold);}
     .reserva-item strong{color:var(--gold);}
     .btn-whats{
       display:inline-block;
       margin-top:8px;
-      background:var(--green);
+      background:linear-gradient(90deg,#25D366,#128C7E);
       color:#fff;
       text-decoration:none;
       padding:6px 10px;
       border-radius:6px;
-      font-size:0.85rem;
+      font-size:.85rem;
       font-weight:600;
+      transition:.2s;
     }
+    .btn-whats:hover{filter:brightness(1.1);}
     .close-btn{
       background:none;
       border:none;
@@ -167,9 +184,13 @@
     }
 
     @media(max-width:600px){
-      .day{min-height:60px;font-size:0.8rem;}
-      .calendar{padding:10px;}
+      header h1{font-size:1.1rem;}
+      .day{min-height:60px;font-size:.8rem;}
+      .calendar{padding:12px;}
+      .reserva-item{font-size:.85rem;}
     }
+
+    @keyframes fadeIn{from{opacity:0}to{opacity:1}}
   </style>
 </head>
 <body>
@@ -213,7 +234,7 @@
 
     async function carregarReservas(){
       try{
-        const res = await fetch(GAS_ENDPOINT+"?acao=listarReservas");
+        const res = await fetch(GAS_ENDPOINT + "?acao=listarReservas");
         reservas = await res.json();
         renderCalendar();
       }catch(err){
@@ -248,7 +269,7 @@
           const pend = reservasDia.filter(r=>r.status==="Pendente").length;
           const conf = reservasDia.filter(r=>r.status==="Confirmada").length;
           if(pend>0) dayEl.innerHTML+=`<div class="badge pend">Pend: ${pend}</div>`;
-          if(conf>0) dayEl.innerHTML+=`<div class="badge conf">Conc: ${conf}</div>`;
+          if(conf>0) dayEl.innerHTML+=`<div class="badge conf">Conf: ${conf}</div>`;
           dayEl.addEventListener("click",()=>abrirModal(dateStr,reservasDia));
         }
         daysContainer.appendChild(dayEl);
@@ -263,10 +284,10 @@
         reservasList.innerHTML+=`
           <div class="reserva-item">
             <strong>${r.nome}</strong><br>
-            ${r.horario?"🕒 "+r.horario+"<br>":""}
-            ${r.ocasiao?"🎈 "+r.ocasiao+"<br>":""}
-            ${r.pessoas?"👥 "+r.pessoas+"<br>":""}
-            ${r.mesa?"🍽️ Mesa: "+r.mesa+"<br>":""}
+            ${r.horario ? "🕒 "+r.horario+"<br>" : ""}
+            ${r.ocasiao ? "🎈 "+r.ocasiao+"<br>" : ""}
+            ${r.pessoas ? "👥 "+r.pessoas+"<br>" : ""}
+            ${r.mesa ? "🍽️ Mesa: "+r.mesa+"<br>" : ""}
             <span>Status: <b style="color:${r.status==='Pendente'?'#ef4444':'#22c55e'}">${r.status}</b></span><br>
             <a class="btn-whats" href="https://wa.me/55${tel}?text=Olá%20${encodeURIComponent(r.nome)}!%20Aqui%20é%20do%20Mercatto%20Delícia.%20Confirmando%20sua%20reserva%20para%20${r.data}%20às%20${r.horario||''}." target="_blank">💬 WhatsApp</a>
           </div>
