--- a/index.html
+++ b/index.html
@@ -19,24 +19,24 @@
   --radius:18px;
 }
 
-*{box-sizing:border-box}
-body{
-  margin:0;
+*{box-sizing:border-box;margin:0;padding:0;}
+html,body{
+  width:100%;
+  height:100%;
   background:var(--bg);
   color:var(--text);
   font-family:'Inter',sans-serif;
   display:flex;
   flex-direction:column;
   align-items:center;
-  justify-content:center;
-  min-height:100vh;
-  padding:30px 10px;
+  justify-content:flex-start;
+  overflow-x:hidden;
 }
 
 /* HEADER */
 header{
   text-align:center;
-  margin-bottom:25px;
+  margin:20px 0;
   animation:fadeIn 1s ease;
 }
 header img{
@@ -54,15 +54,17 @@ header h1{
 
 /* CALENDÁRIO */
 .calendar{
+  flex:1;
   width:100%;
-  max-width:900px;
+  max-width:1200px;
   background:var(--card);
   border-radius:var(--radius);
   padding:24px;
   box-shadow:0 10px 40px rgba(0,0,0,.6);
   border:1px solid var(--line);
   animation:fadeInUp .5s ease;
-  transform:translateY(0);
+  overflow:auto;
+  margin-bottom:20px;
 }
 
 .calendar-header{
@@ -77,7 +79,7 @@ header h1{
   background:none;
   border:none;
   color:var(--gold);
-  font-size:1.6rem;
+  font-size:1.8rem;
   cursor:pointer;
   padding:6px 10px;
   font-weight:700;
@@ -86,7 +88,7 @@ header h1{
 .calendar-header button:hover{transform:scale(1.2);}
 .calendar-header h2{
   margin:0;
-  font-size:1.4rem;
+  font-size:1.6rem;
   color:var(--text);
 }
 
@@ -107,7 +109,7 @@ header h1{
   border:1px solid var(--line);
   border-radius:12px;
   padding:16px 8px;
-  min-height:90px;
+  min-height:100px;
   font-size:1.1rem;
   cursor:pointer;
   display:flex;
@@ -164,6 +166,8 @@ header h1{
   box-shadow:0 15px 45px rgba(0,0,0,.7);
   border:1px solid var(--line);
   animation:fadeInUp .3s ease;
+  max-height:80vh;
+  overflow-y:auto;
 }
 .modal-content h3{
   text-align:center;
@@ -207,16 +211,24 @@ header h1{
   font-size:1rem;
 }
 
-@media(max-width:700px){
-  body{padding:15px 8px;}
-  header img{width:100px;}
-  header h1{font-size:1.2rem;}
+/* RESPONSIVIDADE */
+@media(max-width:900px){
   .calendar{padding:15px;}
-  .calendar-header h2{font-size:1.1rem;}
-  .day{min-height:70px;font-size:.9rem;}
-  .day .num{font-size:1rem;}
+  .calendar-header h2{font-size:1.3rem;}
+  .day{min-height:80px;font-size:.95rem;}
+  .day .num{font-size:1.05rem;}
   .badge{font-size:.75rem;}
-  .modal-content{padding:18px;}
+}
+@media(max-width:600px){
+  header img{width:90px;}
+  header h1{font-size:1.2rem;}
+  .calendar{
+    border-radius:0;
+    max-width:100%;
+    height:calc(100vh - 150px);
+    overflow-y:auto;
+  }
+  .calendar-header{flex-wrap:wrap;gap:10px;}
 }
 
 @keyframes fadeIn{from{opacity:0}to{opacity:1}}
