--- a/index.html
+++ b/index.html
@@ -26,26 +26,25 @@ html,body{
   background:var(--bg);
   color:var(--text);
   font-family:'Inter',sans-serif;
+  overflow:hidden;
   display:flex;
   flex-direction:column;
-  align-items:center;
-  justify-content:flex-start;
-  overflow-x:hidden;
 }
 
 /* HEADER */
 header{
   text-align:center;
-  margin:20px 0;
+  padding:15px 0 10px;
   animation:fadeIn 1s ease;
+  flex-shrink:0;
 }
 header img{
-  width:130px;
+  width:110px;
   border-radius:50%;
   box-shadow:0 0 25px rgba(184,134,11,.4);
 }
 header h1{
-  margin-top:14px;
+  margin-top:10px;
   font-size:1.6rem;
   color:var(--gold);
   font-weight:700;
@@ -55,16 +54,17 @@ header h1{
 /* CALENDÁRIO */
 .calendar{
   flex:1;
+  display:flex;
+  flex-direction:column;
+  justify-content:flex-start;
   width:100%;
-  max-width:1200px;
+  height:100%;
   background:var(--card);
-  border-radius:var(--radius);
-  padding:24px;
-  box-shadow:0 10px 40px rgba(0,0,0,.6);
-  border:1px solid var(--line);
-  animation:fadeInUp .5s ease;
-  overflow:auto;
-  margin-bottom:20px;
+  border-radius:0;
+  padding:20px 24px 40px;
+  box-shadow:0 0 50px rgba(0,0,0,.6);
+  border-top:1px solid var(--line);
+  overflow-y:auto;
 }
 
 .calendar-header{
@@ -79,7 +79,7 @@ header h1{
   background:none;
   border:none;
   color:var(--gold);
-  font-size:1.8rem;
+  font-size:2rem;
   cursor:pointer;
   padding:6px 10px;
   font-weight:700;
@@ -88,7 +88,7 @@ header h1{
 .calendar-header button:hover{transform:scale(1.2);}
 .calendar-header h2{
   margin:0;
-  font-size:1.6rem;
+  font-size:1.8rem;
   color:var(--text);
 }
 
@@ -109,7 +109,7 @@ header h1{
   border:1px solid var(--line);
   border-radius:12px;
   padding:16px 8px;
-  min-height:100px;
+  min-height:120px;
   font-size:1.1rem;
   cursor:pointer;
   display:flex;
@@ -211,24 +211,13 @@ header h1{
   font-size:1rem;
 }
 
-/* RESPONSIVIDADE */
+/* MOBILE */
 @media(max-width:900px){
-  .calendar{padding:15px;}
-  .calendar-header h2{font-size:1.3rem;}
-  .day{min-height:80px;font-size:.95rem;}
-  .day .num{font-size:1.05rem;}
-  .badge{font-size:.75rem;}
-}
-@media(max-width:600px){
   header img{width:90px;}
   header h1{font-size:1.2rem;}
-  .calendar{
-    border-radius:0;
-    max-width:100%;
-    height:calc(100vh - 150px);
-    overflow-y:auto;
-  }
-  .calendar-header{flex-wrap:wrap;gap:10px;}
+  .calendar{padding:10px;height:calc(100vh - 120px);}
+  .day{min-height:90px;font-size:.9rem;}
+  .badge{font-size:.75rem;}
 }
 
 @keyframes fadeIn{from{opacity:0}to{opacity:1}}
@@ -254,7 +243,6 @@ header h1{
   <div class="days" id="days"></div>
 </div>
 
-<!-- MODAL -->
 <div id="modal">
   <div class="modal-content">
     <h3 id="modalDate">Reservas do dia</h3>
