--- a/index.html
+++ b/index.html
@@ -12,33 +12,173 @@
   --radius:18px;
 }
 *{margin:0;padding:0;box-sizing:border-box}
-html,body{height:100%;background:var(--bg);font-family:'Inter',sans-serif;color:var(--text);display:flex;flex-direction:column}
-header{text-align:center;padding:25px 10px 15px;background:linear-gradient(180deg,rgba(212,175,55,.12),transparent);box-shadow:0 3px 15px rgba(0,0,0,.4)}
-header h1{font-family:'Playfair Display',serif;font-size:2rem;color:var(--gold);text-shadow:0 0 12px rgba(212,175,55,.4)}
+html,body{
+  width:100%;
+  height:100%;
+  background:var(--bg);
+  font-family:'Inter',sans-serif;
+  color:var(--text);
+  display:flex;
+  flex-direction:column;
+  overflow:hidden;
+}
+header{
+  text-align:center;
+  padding:25px 10px 15px;
+  background:linear-gradient(180deg,rgba(212,175,55,.12),transparent);
+  box-shadow:0 3px 15px rgba(0,0,0,.4);
+  flex-shrink:0;
+}
+header h1{
+  font-family:'Playfair Display',serif;
+  font-size:2rem;
+  color:var(--gold);
+  text-shadow:0 0 12px rgba(212,175,55,.4);
+}
 header p{font-size:1rem;color:var(--muted)}
-.calendar{flex:1;display:flex;flex-direction:column;padding:25px 40px;overflow-y:auto}
-.calendar-header{display:flex;justify-content:space-between;align-items:center;margin-bottom:25px}
-.calendar-header h2{font-family:'Playfair Display',serif;color:var(--gold);font-size:1.8rem}
-.calendar-header button{background:none;border:none;color:var(--gold);font-size:2rem;cursor:pointer;transition:.2s}
-.calendar-header button:hover{transform:scale(1.25);color:var(--accent)}
-.weekdays,.days{display:grid;grid-template-columns:repeat(7,1fr);gap:12px;text-align:center}
-.weekdays div{color:var(--muted);font-weight:600;text-transform:uppercase}
-.day{background:var(--card);border:1px solid rgba(255,255,255,.05);border-radius:var(--radius);min-height:100px;display:flex;flex-direction:column;align-items:center;justify-content:flex-start;padding:10px;transition:.25s;cursor:pointer}
-.day:hover{transform:translateY(-3px);box-shadow:0 0 20px rgba(212,175,55,.25);border-color:var(--gold)}
-.day .num{font-weight:700;font-size:1.2rem;margin-bottom:4px}
-.badge{font-size:.8rem;border-radius:10px;padding:3px 7px;margin-top:4px}
+
+/* CALENDÁRIO */
+.calendar{
+  flex:1;
+  display:flex;
+  flex-direction:column;
+  padding:25px 40px;
+  overflow-y:auto;
+  height:calc(100vh - 110px);
+}
+.calendar-header{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  margin-bottom:25px;
+}
+.calendar-header h2{
+  font-family:'Playfair Display',serif;
+  color:var(--gold);
+  font-size:1.9rem;
+}
+.calendar-header button{
+  background:none;
+  border:none;
+  color:var(--gold);
+  font-size:2.2rem;
+  cursor:pointer;
+  transition:.2s;
+}
+.calendar-header button:hover{
+  transform:scale(1.25);
+  color:var(--accent);
+}
+
+/* GRID */
+.weekdays,.days{
+  display:grid;
+  grid-template-columns:repeat(7,1fr);
+  gap:14px;
+  text-align:center;
+}
+.weekdays div{
+  color:var(--muted);
+  font-weight:600;
+  text-transform:uppercase;
+  letter-spacing:.5px;
+}
+.day{
+  background:var(--card);
+  border:1px solid rgba(255,255,255,.05);
+  border-radius:var(--radius);
+  min-height:150px; /* ← AUMENTEI o tamanho dos cards */
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  padding:16px;
+  transition:all .25s;
+  cursor:pointer;
+  font-size:1.1rem;
+}
+.day:hover{
+  transform:translateY(-3px);
+  box-shadow:0 0 25px rgba(212,175,55,.25);
+  border-color:var(--gold);
+}
+.day .num{
+  font-weight:700;
+  font-size:1.4rem;
+  margin-bottom:6px;
+}
+.badge{
+  font-size:.9rem;
+  border-radius:10px;
+  padding:4px 8px;
+  margin-top:6px;
+}
 .badge.pend{background:rgba(239,68,68,.15);color:var(--red)}
 .badge.conf{background:rgba(34,197,94,.15);color:var(--green)}
 .day.disabled{opacity:.2;pointer-events:none}
-#modal{position:fixed;inset:0;background:rgba(0,0,0,.8);display:none;align-items:center;justify-content:center;z-index:99}
+
+/* MODAL */
+#modal{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.8);
+  display:none;
+  align-items:center;
+  justify-content:center;
+  z-index:99;
+}
 #modal.show{display:flex}
-.modal-content{background:var(--card);border:1px solid var(--gold);border-radius:var(--radius);padding:25px;width:90%;max-width:500px;max-height:80vh;overflow-y:auto;box-shadow:0 0 40px rgba(0,0,0,.8)}
-.modal-content h3{text-align:center;color:var(--gold);font-family:'Playfair Display',serif;margin-bottom:15px}
-.reserva-item{background:var(--bg);border:1px solid var(--gold);border-radius:12px;padding:12px;margin-bottom:12px}
+.modal-content{
+  background:var(--card);
+  border:1px solid var(--gold);
+  border-radius:var(--radius);
+  padding:25px;
+  width:90%;
+  max-width:500px;
+  max-height:80vh;
+  overflow-y:auto;
+  box-shadow:0 0 40px rgba(0,0,0,.8);
+}
+.modal-content h3{
+  text-align:center;
+  color:var(--gold);
+  font-family:'Playfair Display',serif;
+  margin-bottom:15px;
+}
+.reserva-item{
+  background:var(--bg);
+  border:1px solid var(--gold);
+  border-radius:12px;
+  padding:12px;
+  margin-bottom:12px;
+}
 .reserva-item strong{color:var(--gold)}
-.btn-whats{display:inline-block;background:linear-gradient(90deg,#25D366,#128C7E);color:#fff;text-decoration:none;padding:8px 14px;border-radius:8px;font-weight:600;margin-top:8px}
-.close-btn{display:block;margin:15px auto 0;background:none;border:none;color:var(--muted);cursor:pointer}
-@media(max-width:800px){.calendar{padding:10px 15px}.day{min-height:80px}header h1{font-size:1.5rem}}
+.btn-whats{
+  display:inline-block;
+  background:linear-gradient(90deg,#25D366,#128C7E);
+  color:#fff;
+  text-decoration:none;
+  padding:8px 14px;
+  border-radius:8px;
+  font-weight:600;
+  margin-top:8px;
+}
+.close-btn{
+  display:block;
+  margin:15px auto 0;
+  background:none;
+  border:none;
+  color:var(--muted);
+  cursor:pointer;
+}
+
+/* MOBILE */
+@media(max-width:900px){
+  header h1{font-size:1.6rem}
+  .calendar{padding:15px;height:calc(100vh - 100px);}
+  .day{min-height:100px;font-size:1rem;}
+  .calendar-header h2{font-size:1.4rem}
+}
 </style>
 </head>
 
@@ -60,6 +200,7 @@ header p{font-size:1rem;color:var(--muted)}
   <div class="days" id="days"></div>
 </div>
 
+<!-- MODAL -->
 <div id="modal">
   <div class="modal-content">
     <h3 id="modalDate">Reservas do dia</h3>
@@ -91,15 +232,22 @@ function renderCalendar(){
   const names=["Janeiro","Fevereiro","Março","Abril","Maio","Junho","Julho","Agosto","Setembro","Outubro","Novembro","Dezembro"];
   monthYear.textContent=`${names[m]} ${y}`;daysContainer.innerHTML="";
   const start=first.getDay();
-  for(let i=0;i<start;i++){const e=document.createElement("div");e.classList.add("day","disabled");daysContainer.appendChild(e);}
+  for(let i=0;i<start;i++){
+    const e=document.createElement("div");
+    e.classList.add("day","disabled");
+    daysContainer.appendChild(e);
+  }
   for(let d=1;d<=last.getDate();d++){
     const date=`${y}-${String(m+1).padStart(2,"0")}-${String(d).padStart(2,"0")}`;
-    const el=document.createElement("div");el.classList.add("day");el.innerHTML=`<div class="num">${d}</div>`;
+    const el=document.createElement("div");
+    el.classList.add("day");
+    el.innerHTML=`<div class="num">${d}</div>`;
     const list=reservas.filter(r=>r.data===date);
     if(list.length>0){
-      const p=list.filter(r=>r.status==="Pendente").length,c=list.filter(r=>r.status==="Confirmada").length;
-      if(p>0)el.innerHTML+=`<div class="badge pend">Pend:${p}</div>`;
-      if(c>0)el.innerHTML+=`<div class="badge conf">Conf:${c}</div>`;
+      const p=list.filter(r=>r.status==="Pendente").length;
+      const c=list.filter(r=>r.status==="Confirmada").length;
+      if(p>0) el.innerHTML+=`<div class="badge pend">Pend:${p}</div>`;
+      if(c>0) el.innerHTML+=`<div class="badge conf">Conf:${c}</div>`;
       el.onclick=()=>abrirModal(date,list);
     }
     daysContainer.appendChild(el);
